    rather than exit_ui_loops, since talking to debconf in the latter isn't
    safe (LP: #792652).  Adjust how maybe_update_grub gets the default boot
    device to avoid regressing LP #756920.

  [ Stéphane Graber ]
  * Add support for Windows 8 user directory detection.
  * Make wubi work when the OS data partition is different from the boot
    partition. (LP: #772470)

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 04 Apr 2012 14:38:43 -0400

ubiquity (2.10.6) precise; urgency=low

  [ Stéphane Graber ]
  * ubiquity-dm: Use macinnis_wallpaper.png by default for ubuntu studio.
    (LP: #971159)

  [ Colin Watson ]
  * Work around LP #972324 by unsetting TMPDIR for xvfb-run and setting it
    again for the inferior command.
  * Fix DEP-8 control file to stop trying to run Xvfb inside Xvfb.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 03 Apr 2012 14:06:44 +0100

ubiquity (2.10.5) precise; urgency=low

  * Exit early from ubiquity_webcam_play and ubiquity_webcam_stop if priv or
    priv->camerabin is NULL.
  * Clear disks from the partman plugin's disk cache if any partitions on
    that disk change, allowing us to notice disk label changes.
  * Fix GPT detection when deciding whether to display the biosgrub method
    (LP: #969038).
  * Automatic update of included source packages: apt-setup 1:0.55ubuntu2,
    partman-partitioning 85ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 30 Mar 2012 23:39:38 +0100

ubiquity (2.10.4) precise; urgency=low

  [ Colin Watson ]
  * Add a log entry before running each target-config hook, to make it a bit
    more feasible to debug hangs there.
  * Call check-language-support with locale names, not with language pack
    names (LP: #963460).

  [ Stéphane Graber ]
  * Change the calls in calculate_result to use the same code path as the
    regular UI. (LP: #964472)
  * Actually call detect_bogus_result() in ubi-usersetup
  * Similarly to ubi-console-setup, don't setup any timeout or similar