@@ -10,8 +10,11 @@ ubiquity (2.10.7) UNRELEASED; urgency=low
   * Add support for Windows 8 user directory detection.
   * Make wubi work when the OS data partition is different from the boot
     partition. (LP: #772470)
+  * Call gsettings through dbus-launch in an hope to ensure its changes
+    are saved to disk. (LP: #960096)
+  * Make ubiquity depend on dbus-x11 for dbus-launch.
 
- -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 04 Apr 2012 14:38:43 -0400
+ -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 04 Apr 2012 18:15:07 -0400
 
 ubiquity (2.10.6) precise; urgency=low
 
